[build-system]
requires = [
    "meson-python",
    "numpy",             # To get paths
    "charset_normalizer" # This is to prevent bugs with F2PY when it reads Fortran sources
]
build-backend = "mesonpy"

[project]
name = "pyc2ray"
description = "Python-wrapped and Accelerated version of C2Ray"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy,
    "tools21cm"]
maintainers = [
    {name = "Patrick Hirling & Michele Bianco"},
]
requires-python = ">=3.9.0"